created components and little styling

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,48 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
+
+}
+
+body {
+  
+  font-size: 1.6rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+  height: 5rem;
+  position: fixed;
+  top: 0;
+  background-color: #EBD8C3;
+  width: 100vw;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  
+}
+
+.navbar a {
+  color: #D885A3;
+  font-weight: bold;
+  font-size: 2rem;
+  margin-left: 1rem;
+  padding: .5rem 2rem;
 }
