--- a/src/component/auth/login.module.css
+++ b/src/component/auth/login.module.css
@@ -2,7 +2,7 @@
 
 .container {
    
-    background: url('/images/bg-2.png');
+    background: url('../../images/bg-2.png');
     background-repeat: no-repeat;
     background-position: bottom;
     height: 101.6vh;
